--- a/apps/itsm/ServiceCatalogue/templates/ServiceCatalogue/services_base.html
+++ b/apps/itsm/ServiceCatalogue/templates/ServiceCatalogue/services_base.html
@@ -127,7 +127,7 @@
 	</li>
 	{% else %}
       	<li class="nav-item">
-          <a class="nav-link" href="{% url 'sso_login' %}?next={{ request.path }}">
+          <a class="nav-link" href="{{ LOGIN_URL }}?next={{ request.path|urlencode }}">
             <i class="bi bi-box-arrow-in-right me-1"></i>{% translate "Login" %}
           </a>
 	</li>
